@startuml
'https://plantuml.com/class-diagram

class Client{
- int noClient
- string nomClient
- string telClient
- string adresseClient
- string cpClient
- string villeClient
- string paysClient
}

class Commande{
- int idCommande
- DateTime dateCommande
- string modePaiement
- string modalitésPaiement
+addProduit(produit : Produit, quantite : float)
+getPrixTotalHT()
+getPrixTotalTVA()
+getPrixTotalTTC()
+editerBon()
}

class Produit{
- string refProduit
- string descriptionProduit
- float prixHT
- float tauxTVA
- string unite
}

class LigneCommande{
-float quantite
}

Commande "1..*"-->"1..1" Client:est passé par >
Commande "1..1"-->"1..*" LigneCommande : contient >
LigneCommande "0..*"-->"1..1" Produit : est formé par >

@enduml